--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h2>For all your incorporated company needs</h2>
 
     <!-- Create an iframe tag-->
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4258.109158523734!2d28.636768801601463!3d41.004733249947435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14b55fafa0a48753%3A0x7dd265c2fdce6808!2sBeylikd%C3%BCz%C3%BC%20Valley%20Of%20Life!5e0!3m2!1sen!2str!4v1618442733206!5m2!1sen!2str"width="100%" height="400px" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
   </body>
 </html>
